docs: add documentacao para listar todas as vagas
